<resources>
    <string name="app_name">StudentManagement</string>
    <string name="action_search">Search</string>
    <string name="action_import">Import contacts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login_acount">Login account</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="find_password">Find password</string>
    <string name="without_login">Without Login</string>


    <!--Gird Button for home-->
    <string name="society_associations">Society</string>
    <string name="associations">Associations</string>
    <string name="library">Library</string>
    <string name="curriculum">Curriculum</string>
    <string name="job">Job</string>
    <string name="announcement">Announcement</string>
    <string name="circle">Circle</string>

    <!--bottom button-->
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="message">Message</string>

    <!--“我”-->
    <string name="mine_small_title">View or edit your information</string>

    <!-- Exit -->
    <string name="exit_save_title">Exit will not save</string>
    <string name="exit_save_content">Continue to exit?</string>
    <string name="exit_edit_title">Cancel editing</string>
    <string name="exit_edit_content">Do you want to discard your changes?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_cancel">Cancel</string>

    <!-- Remove -->
    <string name="remove_title">Remove will couldn\'t undo</string>
    <string name="remove_content">Continue to Remove?</string>
    <string name="remove_successful">Remove successful</string>
    <string name="remove_yes">Yes</string>
    <string name="remove_cancel">Cancel</string>

    <string name="remove">Remove</string>
    <string name="save">Save</string>

    <!-- Contacts-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="position">Position</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="zipCode">Zip Code</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="webside">Webside</string>
    <string name="chatTools">ChatTools</string>
    <string name="remark">Remark</string>

    <!--成绩界面-->
    <string-array name="spingarr">
        <item>大一上学期</item>
        <item>大一下学期</item>
        <item>大二上学期</item>
        <item>大二下学期</item>
        <item>大三上学期</item>
        <item>大三下学期</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Week-->
    <string name="mon">Mon.</string>
    <string name="tues">Tues.</string>
    <string name="wed">Wed.</string>
    <string name="thur">Thur.</string>
    <string name="fri">Fri.</string>
    <string name="sat">Sat.</string>
    <string name="sun">Sun.</string>
    <!--Month-->
    <string name="jan">Jan.</string>
    <string name="feb">Feb.</string>
    <string name="mar">Mar.</string>
    <string name="apr">Apr.</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">Aug.</string>
    <string name="sept">Sept.</string>
    <string name="oct">Oct.</string>
    <string name="nov">Nov.</string>
    <string name="dec">Dec.</string>

    <!--ViewDiaryActivity-->
    <string name="view_diary_appname">View/Edit</string>
    <string name="update_successful">Update successful</string>

    <!--New Diary-->
    <string name="count">Count Words</string>
    <string name="new_title">Title</string>
    <string name="new_content">Take down something</string>
    <string name="new_weather">Input Weather</string>
    <string name="new_address">Input location</string>
    <string name="exit_title">Exit will not save</string>
    <string name="exit_content">Continue to exit?</string>
    <string name="not_null_title">Not  allow to save null words</string>
    <string name="not_null_content">Please check the title or content if is null</string>


    <string name="copy">copy</string>
    <string name="back">back</string>
    <string name="title_count">Title words:</string>
    <string name="content_count">Content Words:</string>
    <string name="all_count">All words:</string>
    <string name="copy_successful">Copy successful</string>


    <!--Face-->
    <string name="page_preview">face attributes detect(video)</string>
    <string name="face_recognize_mode">face compare 1:n(video vs database)</string>
    <string name="page_single_image">face attributes detect(image)</string>
    <string name="page_multi_image">face compare 1:n(image vs image)</string>
    <string name="start_process">process</string>
    <string name="choose_local_image">choose local image</string>
    <string name="choose_main_image">choose main image</string>
    <string name="add_item_image">add item image</string>
    <string name="processing">processing</string>
    <string name="get_picture_failed">failed to get picture!</string>
    <string name="permission_denied">permission denied!</string>
    <string name="active_engine">active engine</string>
    <string name="active_success">active success</string>
    <string name="already_activated">already activated</string>
    <string name="active_failed">active failed,code is %d</string>
    <string name="init_failed">init failed,code is %d</string>
    <string name="engine_not_initialized">engine not initialized! code is %d</string>
    <string name="notice_choose_main_img">please choose main image first</string>
    <string name="compare_failed">compare failed!code is %d</string>
    <string name="register">register</string>
    <string name="liveness_detect">liveness detect</string>
    <string name="face_manage">face manage</string>
    <string name="batch_register">batch register</string>
    <string name="notification_register">please put the images that need to register into directory \nsdcard/arcfacedemo/register</string>
    <string name="registering_please_wait">registering,please wait</string>
    <string name="clear_faces">clear faces</string>
    <string name="no_face_need_to_delete">no face need to delete</string>
    <string name="notification">notification</string>
    <string name="confirm_delete">delete those %d images and face features?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ft_op_0">only detect 0 degree in video mode</string>
    <string name="ft_op_90">only detect 90 degree in video mode</string>
    <string name="ft_op_180">only detect 180 degree in video mode</string>
    <string name="ft_op_270">only detect 270 degree in video mode</string>
    <string name="ft_op_all">detect all degrees in video mode</string>

    <!--招聘城市列表-->
    <string-array name="recruit_city">
        <item>位置:全部</item>
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>杭州</item>
        <item>佛山</item>
        <item>惠州</item>
        <item>厦门</item>
        <item>其他</item>
    </string-array>

    <!--招聘岗位列表-->
    <string-array name="job_position">
        <item>岗位:全部</item>
        <item>经营管理类</item>
        <item>销售类</item>
        <item>客户服务类</item>
        <item>项目管理类</item>
        <item>质量管理类</item>
        <item>市场/公关/媒介类</item>
        <item>人力资源类</item>
        <item>行政/后勤类</item>
        <item>财务/审计/统计类</item>
        <item>计算机/网络/技术类</item>
        <item>电子/电器/通信技术类</item>
        <item>电气/能源/动力类</item>
        <item>咨询/顾问类</item>
        <item>金融/保险类</item>
        <item>贸易/运输/建筑类</item>
        <item>其他类</item>
    </string-array>
</resources>
