<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/app_bar_base"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">
            <EditText
                android:id="@+id/text_view_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:hint="@string/new_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:background="#00000000"/>
            <EditText
                android:id="@+id/text_view_content"
                android:textSize="14sp"
                android:hint="@string/new_content"
                android:minLines="10"
                android:maxLines="20"
                android:gravity="top"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"/>
            <EditText
                android:id="@+id/text_view_weather"
                android:hint="@string/new_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/text_view_address"
                android:layout_marginBottom="50dp"
                android:hint="@string/new_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>